@@ -44,6 +44,5 @@ typedef struct
 gboolean channel_list_exists (server *serv);
 void create_channel_list (session *sess);
 void channel_list_append (server *serv, char *channel, char *users, char *topic);
-void repopulate_channel_list (channel_list_window *win);
 
 #endif
